# datasetCreation

./: .gitignore  3channelto1.py  README.md  checkimgpix.py  enhance_CD.py  hello.py  imgRestore.py  main.py  paicha.py  pix255to1.py  pixto255.py  pyproject.toml  test.ipynb  test.py  tif2png.py  zhengli.py
data/ChangeDetection/: split_val_train.py
data/Segmentation/: README.md
project/ChangeDetect/: README.md  checkphoto.py  crop_merge.py  dataintegration.py  labelme2dataset.py  rgb2gray.py  split_data.py
project/Segmentation/: README.md
project/recognition/: README.md
utils/: README.md  canonicalFileName.py  compare.py  dataEnhancement.py  dataPrePare.py  delet.py  find.py  merge.py  vision.py  voc_annotation.py  xml_2_dota.py  xml_2_txt.py
utils/dataEnhancement/: change.py  dataEnhancement.py
utils/dataPreprocess/: dataPre.py
utils/postpocessing/: coco2datasets.py  coco2datassets.py  enLabel2chLabel.py
